update no button movement 04-10-21

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <title>Hello chi em :v</title>
+    <title>Thư mời 20/10 VIT 2021</title>
 </head>
 
 <body>
-    <h1>
+    <h1 id="title">
         Bấm "Không" thử xem :v
     </h1>
     <div id="yes" class="choice btn btn-success">
