add loading overlay 04-10-21

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <div class="loading">
+        <div class='uil-ring-css' style='transform:scale(0.79);'>
+            <div></div>
+        </div>
+    </div>
+    
     <h1 id="title">
         Bấm "Không" thử xem :v
     </h1>
