add some new features 04-10-21

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <script language="javascript" src="/scripts/main.js"></script>
@@ -11,16 +12,18 @@
     <title>Thư mời 20/10 VIT 2021</title>
 </head>
 
+
+
 <body>
     <div class="loading">
         <div class='uil-ring-css' style='transform:scale(0.79);'>
             <div></div>
         </div>
     </div>
-    
-    <h1 id="title">
-        Bấm "Không" thử xem :v
-    </h1>
+
+    <div id="title">
+        <h1>Bấm "Không" thử xem :v</h1>
+    </div>
     <div id="yes" class="choice btn btn-success">
         <h2>Có</h2>
     </div>
