upload demo file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         Đây là lời chúc :v
                     </div>
                     <div>
-                        <img src="./assets/img/vit_girls/thiep.jpg" alt="" class="card__content-img">
+                        <img src="./assets/img/thiep.jpg" alt="" class="card__content-img">
                     </div>
                 </div>
             </div>
