--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <div class="card__content">
                     <form action="" class="card__form" id="form-1">
-                        <input type="text" class="card__input">
+                        <input type="text" class="card__input" id="card-input">
                         <div class="btn btn--success card__btn" id="card-ok">OK</div>
                     </form>
                 </div>
