--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="card__content">
                     <form action="" class="card__form" id="form-1">
                         <input type="text" class="card__input" id="card-input">
-                        <div class="btn btn--success card__btn" id="card-ok">OK</div>
+                        <div class="btn btn--success btn--disable card__btn" id="card-ok">OK</div>
                     </form>
                 </div>
             </div>
