move button yes and no

--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="main">
-            <h1 class="title">
-                Chị em có iu anh em hông nè 😁😁
-            </h1>
-            <div class="wrap">
-                <div class="btn btn--success" id="btn-yes">Có</div>
-                <div class="btn btn--danger" id="btn-no">Khum</div>
-            </div>
+    <div class="main">
+        <h1 class="title" id="title">
+            Chị em có iu anh em hông nè 😁😁
+        </h1>
         </div>
+        <div class="btn btn--success" id="btn-yes">Có</div>
+        <div class="btn btn--danger" id="btn-no">Khum</div>
     </div>
 
     <div class="modal" id="modal-1">
@@ -37,7 +34,7 @@
 
                 <div class="card__content">
                     <form action="" class="card__form" id="form-1">
-                        <input type="text" class="card__input" id="card-input">
+                        <textarea class="card__input" id="card-input" cols="0" rows="5"></textarea>
                         <div class="btn btn--success btn--disable card__btn" id="card-ok">OK</div>
                     </form>
                 </div>
