update modal reason

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
                 <h1 class="card__title">
                     Nói thử xem tại sao lại iu chúng mình nha 😘😘
                 </h1>
+                <p class="note">
+                    Lí do phải dài tối thiểu
+                    <span id="total"></span>
+                    ký tự
+                    <br>
+                    Cần nhập thêm
+                    <span id="curr"></span>
+                    ký tự nữa
+                    <br>
+                    Phải nhập đủ mới ấn được nút "OK" nhé :>>
+                </p>
 
                 <div class="card__content">
                     <form action="" class="card__form" id="form-1">
