--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <div class="modal" id="modal-2">
         <div class="modal__body">
             <div class="heart__wrap">
-                <div class="heart-flying" id="heart-flying-1"></div>
-                <div class="heart-flying" id="heart-flying-2"></div>
-                <div class="heart-flying" id="heart-flying-3"></div>
+                <div class="heart-flying"></div>
+                <div class="heart-flying"></div>
+                <div class="heart-flying"></div>
             </div>
     
             <div class="card">
