change userName to username

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 
     <div class="modal" id="modal-form-login">
         <div class="modal__body">
-            <form action="" class="form" id="form-login">
+            <form action="" class="form" id="form-login" method="POST">
                 <h1 class="form__title">Đăng nhập</h1>
     
                 <div class="form__group">
-                    <input type="text" class="form__input" name="userName" readonly onfocus="this.removeAttribute('readonly')" autocomplete="off" placeholder=" " required>
+                    <input type="text" class="form__input" name="username" readonly onfocus="this.removeAttribute('readonly')" autocomplete="off" placeholder=" " required>
                     <label for="" class="form__label">Tên đăng nhập</label>
                 </div>
     
