--- a/gift.html
+++ b/gift.html
@@ -38,14 +38,16 @@
                 <div class="card col c-3 m-4 s-6 sm-12"></div>
                 <div class="card col c-3 m-4 s-6 sm-12"></div>
                 <div class="card col c-3 m-4 s-6 sm-12"></div>
+                <!-- <div class="card col c-3 m-4 s-6 sm-12"></div>
                 <div class="card col c-3 m-4 s-6 sm-12"></div>
                 <div class="card col c-3 m-4 s-6 sm-12"></div>
                 <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
+                <div class="card col c-3 m-4 s-6 sm-12"></div> -->
             </div>
         </div>
     </div>
+
+    <div class="modal"></div>
 
     <!-- Bodymovin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
