--- a/gift.html
+++ b/gift.html
@@ -34,20 +34,29 @@
                 Hãy ấn vào từng tấm thiệp để thấy được tâm tư tình cảm của chúng mình nha 🥰🥰
             </h1>
 
-            <div class="row">
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <!-- <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div>
-                <div class="card col c-3 m-4 s-6 sm-12"></div> -->
+            <div class="wrapper">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
             </div>
         </div>
     </div>
 
-    <div class="modal"></div>
+    <div class="modal">
+        <div class="modal__body">
+            <div class="modal__close">
+                <i class='bx bx-x modal__close-icon'></i>
+            </div>
+            <div class="modal__card">
+                <p class="card__text">
+                    Lời chúc ở đây nhé
+                </p>
+                <div>
+                    <img src="./assets/img/thiep.jpg" alt="" class="card__img">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bodymovin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
