--- a/gift.html
+++ b/gift.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="hide" id="wrap-1">
+        <div id="wrap-1">
             <h1 class="title">
                 Xin chào
                 <span id="name">Tân</span>!
@@ -29,7 +29,7 @@
             <div class="confetti" id="confetti"></div>
         </div>
 
-        <div class="wrap_2" id="wrap-2">
+        <div class="wrap_2 hide" id="wrap-2">
             <h1 class="title">
                 Hãy ấn vào từng tấm thiệp để thấy được tâm tư tình cảm của chúng mình nha 🥰🥰
             </h1>
@@ -51,7 +51,7 @@
                 <p class="card__text">
                     Lời chúc ở đây nhé
                 </p>
-                <div>
+                <div class="card__img-container">
                     <img src="./assets/img/thiep.jpg" alt="" class="card__img">
                 </div>
             </div>
