--- a/gift.html
+++ b/gift.html
@@ -15,7 +15,7 @@
         <div id="wrap-1">
             <h1 class="title">
                 Xin chào
-                <span id="name">Tân</span>!
+                <span id="full-name"></span>!
                 <br>
                 Bạn đã nhận được một món quà từ
                 <br>
@@ -42,18 +42,21 @@
         </div>
     </div>
 
-    <div class="modal">
+    <div class="modal active">
         <div class="modal__body">
             <div class="modal__close">
                 <i class='bx bx-x modal__close-icon'></i>
             </div>
             <div class="modal__card">
-                <p class="card__text">
-                    Lời chúc ở đây nhé
-                </p>
-                <div class="card__img-container">
-                    <img src="./assets/img/thiep.jpg" alt="" class="card__img">
+                <div class="img__horizontal">
+                    <img src="./assets/img/ngang.png" alt="" class="card__img">
                 </div>
+                <div class="img__vertical">
+                    <img src="./assets/img/doc.png" alt="" class="card__img">
+                </div>
+            </div>
+            <div class="modal__text">
+                <span>Chúc bạn lớp bên một ngày 20/10 thật vui vẻ, hạnh phúc, học giỏi hơn để gánh mình vượt qua SAMI nhé :3</span>
             </div>
         </div>
     </div>
