--- a/gift.html
+++ b/gift.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="modal active">
+    <div class="modal">
         <div class="modal__body">
             <div class="modal__close">
                 <i class='bx bx-x modal__close-icon'></i>
