--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div class="modal active" id="modal-form-login">
+    <div class="modal" id="modal-form-login">
         <div class="modal__body">
             <form action="gift.html" class="form" id="form-login" method="POST">
                 <h1 class="form__title">Đăng nhập</h1>
