fix bug and add loading animation

--- a/gift.html
+++ b/gift.html
@@ -40,21 +40,19 @@
         </div>
     </div>
 
-    <div class="modal">
-        <div class="modal__body" id="modal-body">
-            <div class="modal__close">
-                <i class='bx bx-x modal__close-icon'></i>
-            </div>
-            <div class="modal__card">
-                <div class="img__horizontal"></div>
-                <div class="img__vertical"></div>
-            </div>
-            <div class="modal__text"><span></span></div>
+    <div class="loading__modal active">
+        <div class="loading">
+            <div class="loading__animate"></div>
+            <h3 class="loading__text">
+                Đợi một lát nha :>>
+            </h3>
         </div>
     </div>
 
+    <div id="modal-wrap"></div>
+
     <!-- Bodymovin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/lottie.min.js"></script>
 
     <!-- Main JS -->
     <script src="./assets/js/gift.js"></script>
