--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     
     <!-- Bodymovin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/lottie.min.js"></script>
 
     <!-- Main JS -->
     <script src="./assets/js/main.js"></script>
