fix bug fit text

--- a/gift.html
+++ b/gift.html
@@ -10,7 +10,8 @@
     <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/gift.css">
     <!-- TextFit -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/textfit/2.4.0/textFit.min.js" integrity="sha512-vLs5rAqfvmv/IpN7JustROkGAvjK/L+vgVDFe7KpdtLztqF8mZDfleK2MZj/xuOrWjma0pW+lPCMcBbPKJVC7g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="./assets/js/jquery.fittext.js"></script>
 </head>
 <body>
     <div class="main">
