--- a/gift.html
+++ b/gift.html
@@ -10,7 +10,7 @@
     <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/gift.css">
     <!-- TextFit -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="./assets/js/jquery.fittext.js"></script>
 </head>
 <body>
