add layer when open card

--- a/gift.html
+++ b/gift.html
@@ -10,11 +10,7 @@
     <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/gift.css">
     <!-- TextFit -->
-<<<<<<< HEAD
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-=======
     <script src="./assets/js/jquery.min.js"></script>
->>>>>>> 42e399d61d1a867e091e2e51c7375a9d78a071b7
     <script src="./assets/js/jquery.fittext.js"></script>
 </head>
 <body>
@@ -44,6 +40,8 @@
             <div class="wrapper" id="wrapper"></div>
         </div>
     </div>
+
+    <div class="layer"></div>
 
     <div class="loading__modal active">
         <div class="loading">
