--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <div class="main">
         <h1 class="title" id="title">
-            Chị em có iu anh em hông nè 😁😁
+            Chị em có iuuu anh em hông nè 😁😁
         </h1>
         </div>
-        <div class="btn btn--success" id="btn-yes">Có</div>
-        <div class="btn btn--danger" id="btn-no">Khum</div>
+        <div class="btn btn--success" id="btn-yes">Cóóó</div>
+        <div class="btn btn--danger" id="btn-no">Khummm</div>
     </div>
 
     <div class="modal" id="modal-1">
