wish text to image

--- a/gift.html
+++ b/gift.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,11 @@
     <!-- TextFit -->
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/jquery.fittext.js"></script>
+    <!-- Html2Canvas -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+
 </head>
+
 <body>
     <div class="main">
         <div id="wrap-1">
@@ -27,7 +32,7 @@
                 <i class='bx bxs-heart title__icon'></i>
             </h1>
             <p class="sub__title">Hãy ấn vào để mở nó ra nha :>></p>
-    
+
             <div class="gift" id="gift"></div>
             <div class="confetti" id="confetti"></div>
         </div>
@@ -60,4 +65,5 @@
     <!-- Main JS -->
     <script src="./assets/js/gift.js"></script>
 </body>
+
 </html>
