--- a/gift.html
+++ b/gift.html
@@ -14,7 +14,7 @@
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/jquery.fittext.js"></script>
     <!-- Html2Canvas -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+    <script src="./assets/js/html2canvas.min.js"></script>
 
 </head>
 
