--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <div class="card__content">
                     <form action="" class="card__form" id="form-1">
-                        <textarea class="card__input" id="card-input" cols="0" rows="5" readonly onfocus="this.removeAttribute('readonly')" autocomplete="off"></textarea>
+                        <textarea class="card__input" id="card-input" cols="0" rows="5" autocomplete="off"></textarea>
                         <div class="btn btn--success btn--disable card__btn" id="card-ok">OK</div>
                     </form>
                 </div>
