add animation off hello and modal for default username

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="hello__modal active">
+        <div class="hello">
+            <div class="hello__animation"></div>
+            <h3 class="hello__text">Hiii :>>></h3>
+        </div>
+    </div>
+
     <div class="main">
         <h1 class="title" id="title">
             Chị em có iuuu anh em hông nè 😁😁
@@ -68,7 +75,7 @@
                     <p class="card__text">
                         Hihi, chúng mình đều biết điều đó mà 🥰🥰😘
                         <br>
-                        Vì sự đáng iêu này nên chị em hãy đăng nhập để xem tiếp theo còn gì bất ngờ nữa nha 😚😚
+                        Vì sự đáng iêuu này nên chị em hãy đăng nhập để xem tiếp theo còn gì bất ngờ nữa nhaaa 😚😚
                     </p>
                     <div class="btn btn--primary" id="card-login">Đăng nhập</div>
                 </div>
@@ -95,6 +102,27 @@
     
                 <input type="submit" class="form__button" value="Đăng nhập">
             </form>
+        </div>
+    </div>
+
+    <div class="modal" id="spiner">
+        <div class="spinner__animation"></div>
+    </div>
+
+    <div class="modal login__notify">
+        <div class="notify__body">
+            <h3 class="notify__text">
+                Hừmmmm....
+                <br>
+                Có vẻ chúng mình không tìm thấy tài khoản của bạn
+                <br>
+                Bạn có muốn tiếp tục đăng nhập mà không cần tài khoản???
+            </h3>
+            <div class="notify__animation"></div>
+            <div class="notify__btn-wrap">
+                <div class="btn btn--succes-outline btn--s notify__btn" id="notify-yes">Yeppp</div>
+                <div class="btn btn--danger btn--s notify__btn" id="notify-no">Nooo</div>
+            </div>
         </div>
     </div>
     
