fix ui off reason

--- a/gift.html
+++ b/gift.html
@@ -18,7 +18,7 @@
         <div class="loading">
             <div class="loading__animate"></div>
             <h3 class="loading__text">
-                Đợi một lát nha :>>
+                Đợi một lát nhaaa :>>
             </h3>
         </div>
     </div>
@@ -35,7 +35,7 @@
                 BOY VIT
                 <i class='bx bxs-heart title__icon'></i>
             </h1>
-            <p class="sub__title">Hãy ấn vào để mở nó ra nha :>></p>
+            <p class="sub__title">Hãy ấn vào để mở nó ra nhé :>></p>
     
             <div class="gift" id="gift"></div>
             <div class="confetti" id="confetti"></div>
@@ -43,7 +43,7 @@
 
         <div class="wrap_2 hide" id="wrap-2">
             <h1 class="title">
-                Hãy ấn vào từng tấm thiệp để thấy được tâm tư tình cảm của chúng mình nha 🥰🥰
+                Hãy ấn vào từng tấm thiệp để thấy được tâm tư tình cảm của chúng mình nhaaa 🥰🥰
             </h1>
 
             <div class="wrapper" id="wrapper"></div>
