--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
             </div>
             <div class="card">
                 <h1 class="card__title">
-                    Nói thử xem tại sao lại iu chúng mình nha 😘😘
+                    Nói thử xem tại sao lại iuuu chúng mình nha 😘😘
                 </h1>
                 <p class="note">
-                    Lí do phải dài tối thiểu
+                    Viết tối thiểu
                     <span id="total"></span>
-                    ký tự
+                    ký tự nhá :>>
+                    <br>
+                    Phải nhập đủ mới ấn được nút "OK" nhé :>>
                     <br>
                     Cần nhập thêm
                     <span id="curr"></span>
-                    ký tự nữa
-                    <br>
-                    Phải nhập đủ mới ấn được nút "OK" nhé :>>
+                    ký tự nữa nhaa!
                 </p>
 
                 <div class="card__content">
