--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chào mừng ngày 20/10</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <!-- Unicon Icon -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- Custom Style -->
@@ -20,13 +22,12 @@
         </div>
     </div>
 
-    <div class="main">
+    <div class="main blur">
         <h1 class="title" id="title">
             Chị em có iuuu anh em hông nè 😁😁
         </h1>
-        </div>
-        <div class="btn btn--success" id="btn-yes">Cóóó</div>
-        <div class="btn btn--danger" id="btn-no">Khummm</div>
+        <div class="btn btn--success blur" id="btn-yes">Cóóó</div>
+        <div class="btn btn--danger blur" id="btn-no">Khummm</div>
     </div>
 
     <div class="modal" id="modal-1">
